Updated Cronbach's Alpha

--- a/jamovi/metaalpha.a.yaml
+++ b/jamovi/metaalpha.a.yaml
@@ -206,4 +206,10 @@ options:
       title: Contour-Enhanced
       type: Bool
       default: false
+
+    - name: showInfPlot
+      title: Show Plot of Influence Diagnostics
+      type: Bool
+      default: false
+      
 ...
