--- a/jamovi/00refs.yaml
+++ b/jamovi/00refs.yaml
@@ -28,4 +28,11 @@ refs:
         pages: 1-8
         url: https://doi.org/10.1177/1948550617697177
 
+    robvis:
+        type: 'software'
+        author: McGuinness, L.
+        year: 2019
+        title: 'robvis: An R package and web application for visualising risk-of-bias assessments.'
+        publisher: '[R package]. Retrieved from https://github.com/mcguinlu/robvis'
+        url: https://github.com/mcguinlu/robvis
 ...
