updated Correlation, added back transformation feature

--- a/jamovi/metacorr.r.yaml
+++ b/jamovi/metacorr.r.yaml
@@ -93,7 +93,15 @@ items:
         - name: AICc
           type: number
           format: zto
-
+          
+    - name:  summaryOutputText
+      title: "Model Summary"
+      type: Html
+      
+    - name:  summaryOutputText2
+      title: "Model Summary"
+      type: Html
+      
     - name: plot
       title: Forest Plot
       type: Image
