Trim Fill Funnel Plot
Moved funnel plots around in the Correlation Coefficients analysis. Added the skelton for multi level meta analysis

--- a/jamovi/0000.yaml
+++ b/jamovi/0000.yaml
@@ -63,6 +63,11 @@ analyses:
     ns: MAJOR
     menuGroup: MAJOR
     menuTitle: Risk of Bias Assessment
+  - title: Correlation Coefficients
+    name: multiLevelMetaCorr
+    ns: MAJOR
+    menuGroup: MAJOR
+    menuTitle: Correlation Coefficients
 usesNative: true
 minApp: 1.0.8
 
