--- a/jamovi/multilevelmetacorr.a.yaml
+++ b/jamovi/multilevelmetacorr.a.yaml
@@ -9,28 +9,30 @@ options:
     - name: data
       type: Data
 
-    - name: dep
-      title: Dependent Variable
+    - name: rcor
+      title: Correlations
+      suggested: [continuous]
+      permitted: [numeric]
       type: Variable
 
-    - name: group
-      title: Grouping Variable
+    - name: samplesize
+      title: Sample sizes
+      suggested: [continuous]
+      permitted: [numeric]
       type: Variable
 
-    - name: alt
-      title: Alternative hypothesis
-      type: List
-      options:
-        - title: Not equal
-          name:  notequal
-        - title: One greater
-          name:  onegreater
-        - title: Two greater
-          name:  twogreater
-      default: notequal
-
-    - name: varEq
-      title: Assume equal variances
-      type: Bool
-      default: true
+    - name: clusterOne
+      title: Cluster Level One
+      permitted: [numeric]
+      type: Variable
+      
+    - name: clusterTwo
+      title: Cluster Level Two
+      permitted: [numeric]
+      type: Variable
+      
+    - name: slab
+      title: Study label
+      suggested: [nominal]
+      type: Variable
 ...
