--- a/jamovi/multilevelmetacorr.u.yaml
+++ b/jamovi/multilevelmetacorr.u.yaml
@@ -9,26 +9,37 @@ children:
     stretchFactor: 1
     children:
       - type: TargetLayoutBox
-        label: Dependent Variable
+        label: Correlations
         children:
           - type: VariablesListBox
-            name: dep
+            name: rcor
             maxItemCount: 1
             isTarget: true
       - type: TargetLayoutBox
-        label: Grouping Variable
+        label: Sample sizes
         children:
           - type: VariablesListBox
-            name: group
+            name: samplesize
             maxItemCount: 1
             isTarget: true
-  - type: LayoutBox
-    margin: large
-    children:
-      - type: ComboBox
-        name: alt
-  - type: LayoutBox
-    margin: large
-    children:
-      - type: CheckBox
-        name: varEq
+      - type: TargetLayoutBox
+        label: Cluster Level One
+        children:
+          - type: VariablesListBox
+            name: clusterOne
+            maxItemCount: 1
+            isTarget: true
+      - type: TargetLayoutBox
+        label: Cluster Level Two
+        children:
+          - type: VariablesListBox
+            name: clusterTwo
+            maxItemCount: 1
+            isTarget: true
+      - type: TargetLayoutBox
+        label: Study label
+        children:
+          - type: VariablesListBox
+            name: slab
+            maxItemCount: 1
+            isTarget: true
