Multilevel model tables
Added tables to the multilevel model results page for corrmeta

--- a/jamovi/0000.yaml
+++ b/jamovi/0000.yaml
@@ -68,6 +68,7 @@ analyses:
     ns: MAJOR
     menuGroup: MAJOR
     menuTitle: Correlation Coefficients
+    menuSubgroup: Multilevel Models
 usesNative: true
 minApp: 1.0.8
 
