--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -9,5 +9,5 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Message that will be displayed on users'' first issue'
-        pr-message: 'Message that will be displayed on users'' first pr'
+        issue-message: 'If you dont get a reply from me in a couple days comment on this issue so Ill see it'' first issue'
+        pr-message: 'If you dont get a reply from me in a couple days comment on this issue so Ill see it'' first pr'
