--- a/jamovi/changescore.r.yaml
+++ b/jamovi/changescore.r.yaml
@@ -67,4 +67,19 @@ items:
           type: number
           format: zto,pvalue
 
+    - name:  fsnRICH
+      title: ""
+      type: Table
+      rows:  4
+      columns:
+        - name: label
+          title: 'Test Name'
+          type: text
+        - name: failSafeNumber
+          title: 'value'
+          type: integer
+          format: zto
+        - name: p
+          type: number
+          format: zto,pvalue
 ...
