--- a/jamovi/metameandiff.r.yaml
+++ b/jamovi/metameandiff.r.yaml
@@ -110,7 +110,20 @@ items:
       renderFun: .plot
       refs: [ metafor ]
 
-
+    - name:  selModelOutput
+      type: Table
+      refs: [ metafor ]
+      title: "Selection Model Results"
+      rows:  1
+      columns:
+        - name: deltaLabel
+          title: ''
+          type: text
+        - name: deltaK
+          type: number
+        - name: deltaEstimate
+          type: number
+          
     - name:  fsnRICH
       title: ""
       type: Table
