--- a/jamovi/metameandiff.u.yaml
+++ b/jamovi/metameandiff.u.yaml
@@ -57,13 +57,6 @@ children:
             name: slab
             maxItemCount: 1
             isTarget: true
-      - type: TargetLayoutBox
-        label: Moderator (optional)
-        children:
-          - type: VariablesListBox
-            name: moderatorcor
-            maxItemCount: 1
-            isTarget: true
   - type: CollapseBox
     label: Model Options
     collapsed: true
@@ -92,6 +85,17 @@ children:
           - type: CheckBox
             name: testType
             useSingleCell: true
+  - type: VariableSupplier
+    persistentItems: false
+    stretchFactor: 1
+    children:
+      - type: TargetLayoutBox
+        label: Moderator
+        children:
+          - type: VariablesListBox
+            name: moderatorcor
+            maxItemCount: 1
+            isTarget: true
   - type: CollapseBox
     label: Plots
     collapsed: true
@@ -197,4 +201,3 @@ children:
             name: showInfPlot
           - type: CheckBox
             name: showLL
-            
